fix packages for servlet